objects/Product_Manual__c.object
<CustomObject>
    <fields>
        <fullName>Directory_Name__c</fullName>
        <label>Directory Name</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Custom IC Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design for Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital IC Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silicon-Package-Board Co-Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tensilica IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification IP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Manual_Name_Order__c</fullName>
        <label>Product Manual Name Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <label>Release Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Order__c</fullName>
        <label>Release Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top 5</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Manual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Directory_Name__c</columns>
        <columns>Platform__c</columns>
        <columns>Product_Manual_Name_Order__c</columns>
        <columns>Release_Name__c</columns>
        <columns>Release_Order__c</columns>
        <columns>Top_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Manual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Manuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>